--- a/report/egbib.bib
+++ b/report/egbib.bib
@@ -45,47 +45,31 @@
 	Xiaoqiang~Zheng},
 	year={2015}
 }
-
-@misc{Authors14,
- author = {Authors},
- title = {The frobnicatable foo filter},
- note = {Face and Gesture  submission ID 324. Supplied as additional material {\tt fg324.pdf}},
- year = 2014
+@book{van1995python, 
+	title={Python tutorial}, 
+	author={Van Rossum, Guido and Drake Jr, Fred L}, 
+	year={1995}, 
+	publisher={Centrum voor Wiskunde en Informatica Amsterdam, The Netherlands} 
 }
-
-@misc{Authors14b,
- author = {Authors},
- title = {Frobnication tutorial},
- note = {Supplied as additional material {\tt tr.pdf}},
- year = 2014
+@article{scikit-learn,
+	title={Scikit-learn: Machine Learning in {P}ython},
+	author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+	and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+	and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+	Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+	journal={Journal of Machine Learning Research},
+	volume={12},
+	pages={2825--2830},
+	year={2011}
 }
-
-@article{Alpher02,
-author = {FirstName Alpher},
-title = {Frobnication},
-journal = {Journal of Foo},
-volume = 12, 
-number = 1, 
-pages = {234--778}, 
-year = 2002
+@online{chollet2015keras,
+	title={Keras},
+	author={Chollet, Francois and others},
+	year={2015},
+	publisher={GitHub},
+	url={https://github.com/fchollet/keras}
 }
-
-@article{Alpher03,
-author = {FirstName Alpher and  FirstName Fotheringham-Smythe},
-title = {Frobnication revisited},
-journal = {Journal of Foo},
-volume = 13, 
-number = 1, 
-pages = {234--778}, 
-year = 2003
-}
-
-@article{Alpher04,
-author = {FirstName Alpher and FirstName Fotheringham-Smythe and FirstName Gamow},
-title = {Can a machine frobnicate?},
-journal = {Journal of Foo},
-volume = 14, 
-number = 1, 
-pages = {234--778}, 
-year = 2004
+@misc{kaggle,
+	title={Kaggle},
+	howpublished={\url{https://www.kaggle.com}},
 }
